tests/snapshots/error-parser-class_body-with_errors_before_class_body.snap
---
source: tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.method shouldn't be here
.class 42
.super java/lang/Object
unexpected
----- STDERR -----
[E-008] Error: unexpected directive outside class definition
   ╭─[ test_data/integration/error/parser/class_body/with_errors_before_class_body.rns:1:1 ]
   │
 1 │ .method shouldn't be here
   │ ───┬───  
   │    ╰───── valid context for .method directive is: 'class body'.
   │ 
   │ Help: Ensure all code is declared inside a '.class' directive.
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-008
───╯
[E-007] Error: unexpected token in class body: 'Identifier(Spanned { value: "unexpected", span: Span { byte_start: 60, byte_end: 70, line: 3, col_start: 0, col_end: 10 } })'
   ╭─[ test_data/integration/error/parser/class_body/with_errors_before_class_body.rns:4:1 ]
   │
 4 │ unexpected
   │ ─────┬────  
   │      ╰────── unexpected token
   │ 
   │ Help: Check the syntax of the class body and ensure all tokens are valid.
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-007
───╯
----- HASH -----
not generated
