tests/snapshots/error-parser-class_body-with_errors_before_class_body2.snap
---
source: tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class 42
unexpected
.super java/lang/Object
----- STDERR -----
[E-007] Error: unexpected identifier class body
   ╭─[ test_data/integration/error/parser/class_body/with_errors_before_class_body2.rns:2:1 ]
   │
 2 │ unexpected
   │ ─────┬────  
   │      ╰────── unexpected token
   │ 
   │ Help: Check the syntax of the class body and ensure all tokens are valid.
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-007
───╯
----- HASH -----
not generated
