tests/snapshots/error-parser-outside_class_directive-after_class_dir-dot_code.snap
---
source: tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class public EmptyClass
.super java/lang/Object

.class_end
.code
----- STDERR -----
[E-008] Error: unexpected directive outside class definition
   ╭─[ test_data/integration/error/parser/outside_class_directive/after_class_dir/dot_code.rns:5:1 ]
   │
 5 │ .code
   │ ──┬──  
   │   ╰──── valid context for .code directive is: 'method body'.
   │ 
   │ Help: Ensure all code is declared inside a '.class' directive.
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-008
───╯
----- HASH -----
not generated
